--- a/src/app/components/food-page/food-page.component.html
+++ b/src/app/components/food-page/food-page.component.html
@@ -1,1 +1,285 @@
-<p>food-page works!</p>
+<section id="foodies" class="my-5">
+    <div class="container my-5 py-5">
+
+      <div class="section-header d-md-flex justify-content-between align-items-center">
+        <h2 class="display-3 fw-normal">Đồ Ăn Cho Thú Cưng</h2>
+        <div class="mb-4 mb-md-0">
+          <p class="m-0">
+            <button class="filter-button me-4  active" data-filter="*">TẤT CẢ</button>
+            <button class="filter-button me-4 " data-filter=".cat">MÈO</button>
+            <button class="filter-button me-4 " data-filter=".dog">CHÓ</button>
+          </p>
+        </div>
+        <div>
+          <a href="#" class="btn btn-outline-dark btn-lg text-uppercase fs-6 rounded-1">
+            đặt mua ngay
+            <svg width="24" height="24" viewBox="0 0 24 24" class="mb-1">
+              <use xlink:href="#arrow-right"></use>
+            </svg></a>
+        </div>
+      </div>
+
+      <div class="isotope-container row">
+
+        <div class="item cat col-md-4 col-lg-3 my-4">
+          <!-- <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
+            New
+          </div> -->
+          <div class="card position-relative">
+            <a href="single-product.html"><img src="./assets/images/item9.jpg" class="img-fluid rounded-4" alt="image"></a>
+            <div class="card-body p-0">
+              <a href="single-product.html">
+                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
+              </a>
+
+              <div class="card-text">
+                
+
+                <h3 class="secondary-font text-primary">200.000 VND</h3>
+
+                <div class="d-flex flex-wrap mt-3">
+                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
+                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
+                  </a>
+                  <a href="#" class="btn-wishlist px-4 pt-3 ">
+                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
+                  </a>
+                </div>
+
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="item dog col-md-4 col-lg-3 my-4">
+          <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
+            New
+          </div>
+          <div class="card position-relative">
+            <a href="single-product.html"><img src="./assets/images/item10.jpg" class="img-fluid rounded-4" alt="image"></a>
+            <div class="card-body p-0">
+              <a href="single-product.html">
+                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
+              </a>
+
+              <div class="card-text">
+                
+
+                <h3 class="secondary-font text-primary">200.000 VND</h3>
+
+                <div class="d-flex flex-wrap mt-3">
+                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
+                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
+                  </a>
+                  <a href="#" class="btn-wishlist px-4 pt-3 ">
+                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
+                  </a>
+                </div>
+
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="item dog col-md-4 col-lg-3 my-4">
+          <!-- <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
+            New
+          </div> -->
+          <div class="card position-relative">
+            <a href="single-product.html"><img src="./assets/images/item11.jpg" class="img-fluid rounded-4" alt="image"></a>
+            <div class="card-body p-0">
+              <a href="single-product.html">
+                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
+              </a>
+
+              <div class="card-text">
+                
+
+                <h3 class="secondary-font text-primary">200.000 VND</h3>
+
+                <div class="d-flex flex-wrap mt-3">
+                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
+                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
+                  </a>
+                  <a href="#" class="btn-wishlist px-4 pt-3 ">
+                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
+                  </a>
+                </div>
+
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="item cat col-md-4 col-lg-3 my-4">
+          <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
+            Sold
+          </div>
+          <div class="card position-relative">
+            <a href="single-product.html"><img src="./assets/images/item12.jpg" class="img-fluid rounded-4" alt="image"></a>
+            <div class="card-body p-0">
+              <a href="single-product.html">
+                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
+              </a>
+
+              <div class="card-text">
+                
+
+                <h3 class="secondary-font text-primary">200.000 VND</h3>
+
+                <div class="d-flex flex-wrap mt-3">
+                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
+                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
+                  </a>
+                  <a href="#" class="btn-wishlist px-4 pt-3 ">
+                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
+                  </a>
+                </div>
+
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="item bird col-md-4 col-lg-3 my-4">
+          <!-- <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
+            New
+          </div> -->
+          <div class="card position-relative">
+            <a href="single-product.html"><img src="./assets/images/item13.jpg" class="img-fluid rounded-4" alt="image"></a>
+            <div class="card-body p-0">
+              <a href="single-product.html">
+                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
+              </a>
+
+              <div class="card-text">
+                
+
+                <h3 class="secondary-font text-primary">200.000 VND</h3>
+
+                <div class="d-flex flex-wrap mt-3">
+                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
+                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
+                  </a>
+                  <a href="#" class="btn-wishlist px-4 pt-3 ">
+                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
+                  </a>
+                </div>
+
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="item bird col-md-4 col-lg-3 my-4">
+          <!-- <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
+            New
+          </div> -->
+          <div class="card position-relative">
+            <a href="single-product.html"><img src="./assets/images/item14.jpg" class="img-fluid rounded-4" alt="image"></a>
+            <div class="card-body p-0">
+              <a href="single-product.html">
+                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
+              </a>
+
+              <div class="card-text">
+                
+
+                <h3 class="secondary-font text-primary">200.000 VND</h3>
+
+                <div class="d-flex flex-wrap mt-3">
+                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
+                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
+                  </a>
+                  <a href="#" class="btn-wishlist px-4 pt-3 ">
+                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
+                  </a>
+                </div>
+
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="item dog col-md-4 col-lg-3 my-4">
+          <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
+            Sale
+          </div>
+          <div class="card position-relative">
+            <a href="single-product.html"><img src="./assets/images/item15.jpg" class="img-fluid rounded-4" alt="image"></a>
+            <div class="card-body p-0">
+              <a href="single-product.html">
+                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
+              </a>
+
+              <div class="card-text">
+                
+
+                <h3 class="secondary-font text-primary">200.000 VND</h3>
+
+                <div class="d-flex flex-wrap mt-3">
+                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
+                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
+                  </a>
+                  <a href="#" class="btn-wishlist px-4 pt-3 ">
+                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
+                  </a>
+                </div>
+
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="item cat col-md-4 col-lg-3 my-4">
+          <!-- <div class="z-1 position-absolute rounded-3 m-3 px-3 border border-dark-subtle">
+            New
+          </div> -->
+          <div class="card position-relative">
+            <a href="single-product.html"><img src="./assets/images/item16.jpg" class="img-fluid rounded-4" alt="image"></a>
+            <div class="card-body p-0">
+              <a href="single-product.html">
+                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
+              </a>
+
+              <div class="card-text">
+                
+
+                <h3 class="secondary-font text-primary">200.000 VND</h3>
+
+                <div class="d-flex flex-wrap mt-3">
+                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
+                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
+                  </a>
+                  <a href="#" class="btn-wishlist px-4 pt-3 ">
+                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
+                  </a>
+                </div>
+
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
+
+    </div>
+  </section>
