--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -116,10 +116,10 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a href="shop.html" class="nav-link">Dịch Vụ</a>
+                    <a href="#" class="nav-link">Dịch Vụ</a>
                   </li>
                   <li class="nav-item">
-                    <a href="blog.html" class="nav-link">Blog</a>
+                    <a [routerLink]="['blog']" class="nav-link">Blog</a>
                   </li>
                   <li class="nav-item">
                     <a href="contact.html" class="nav-link">Liên Hệ</a>
