--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -76,38 +76,38 @@
       <div class="offcanvas-body">
         <div class="order-md-last">
           <h4 class="d-flex justify-content-between align-items-center mb-3">
-            <span class="text-primary">Your cart</span>
+            <span class="text-primary">Giỏ Hàng</span>
             <span class="badge bg-primary rounded-circle pt-2">3</span>
           </h4>
           <ul class="list-group mb-3">
             <li class="list-group-item d-flex justify-content-between lh-sm">
               <div>
-                <h6 class="my-0">Grey Hoodie</h6>
-                <small class="text-body-secondary">Brief description</small>
+                <h6 class="my-0">Áo Hoddie Xám</h6>
+                <small class="text-body-secondary">Mô tả</small>
               </div>
               <span class="text-body-secondary">$12</span>
             </li>
             <li class="list-group-item d-flex justify-content-between lh-sm">
               <div>
-                <h6 class="my-0">Dog Food</h6>
-                <small class="text-body-secondary">Brief description</small>
+                <h6 class="my-0">Thức ăn cho chó</h6>
+                <small class="text-body-secondary">Mô tả</small>
               </div>
               <span class="text-body-secondary">$8</span>
             </li>
             <li class="list-group-item d-flex justify-content-between lh-sm">
               <div>
-                <h6 class="my-0">Soft Toy</h6>
-                <small class="text-body-secondary">Brief description</small>
+                <h6 class="my-0">Đồ chơi</h6>
+                <small class="text-body-secondary">Mô tả</small>
               </div>
               <span class="text-body-secondary">$5</span>
             </li>
             <li class="list-group-item d-flex justify-content-between">
-              <span class="fw-bold">Total (USD)</span>
+              <span class="fw-bold">Tổng Tiền</span>
               <strong>$20</strong>
             </li>
           </ul>
   
-          <button class="w-100 btn btn-primary btn-lg" type="submit">Continue to checkout</button>
+          <button class="w-100 btn btn-primary btn-lg" type="submit">Thanh toán</button>
         </div>
       </div>
     </div>
@@ -1032,7 +1032,7 @@
             <h2 class="display-3 fw-normal">Blog Mới Nhất</h2>
             <div>
               <a href="#" class="btn btn-outline-dark btn-lg text-uppercase fs-6 rounded-1">
-                Read all
+               Đọc Hết
                 <svg width="24" height="24" viewBox="0 0 24 24" class="mb-1">
                   <use xlink:href="#arrow-right"></use>
                 </svg></a>
@@ -1097,7 +1097,7 @@
   
                 <div class="card-text">
                   <p class="blog-paragraph fs-6">Top 1: Nhà Sàn</p>
-                  <a href="single-post.html" class="blog-read">đọc thêm</a>
+                  <a href="blog-page" class="blog-read">đọc thêm</a>
                 </div>
   
               </div>
