--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,32 +1,160 @@
+<section id="banner" class="py-3" style="background: #F9F3EC;">
+    <div class="container">
+        <div class="hero-content py-5 my-3">
+            <h2 class="display-1 mt-3 mb-0">Đăng nhập/Đăng kí</h2>
+        </div>
+    </div>
+</section>
+
 <div class="container py-2">
-    <section _ngcontent-ng-c2155392479="" id="register" style="background: url('images/background-img.png') no-repeat;">
-        <div _ngcontent-ng-c2155392479="" class="container">
-            <div _ngcontent-ng-c2155392479="" class="row py-5">
-                <div _ngcontent-ng-c2155392479="" class="offset-md-3 col-md-6 my-5">
-                    <h2 _ngcontent-ng-c2155392479="" class="display-3 fw-normal text-center"> Đăng nhập</h2>
-                    <form [formGroup]="LoginForm" class="ng-untouched ng-pristine ng-valid">
-                        <div _ngcontent-ng-c2155392479="" class="mb-3">
-                            <input _ngcontent-ng-c2155392479="" type="email" name="email" id="email"
-                                placeholder="Nhập Email" class="form-control form-control-lg" formControlName="email">
-                            <p style="color: red;"
-                            *ngIf="LoginForm.get('email')?.errors?.['required']"
-                            >Bạn chưa nhập email</p>
-                            <p style="color: red;"
-                            *ngIf="LoginForm.get('email')?.errors?.['email']"
-                            >Email không đúng định dạng</p>
+    <section class="login-tabs padding-large">
+        <div class="container my-5 py-5">
+            <div class="row">
+                <div class="tabs-listing">
+                    <nav>
+                        <div class="nav nav-tabs d-flex justify-content-center border-dark-subtle mb-3" id="nav-tab"
+                            role="tablist">
+                            <button
+                                class="nav-link mx-3 fs-3 border-bottom border-dark-subtle border-0 text-uppercase active"
+                                id="nav-sign-in-tab" data-bs-toggle="tab" data-bs-target="#nav-sign-in" type="button"
+                                role="tab" aria-controls="nav-sign-in" aria-selected="true">Đăng nhập</button>
+                            <button class="nav-link mx-3 fs-3 border-bottom border-dark-subtle border-0 text-uppercase"
+                                id="nav-register-tab" data-bs-toggle="tab" data-bs-target="#nav-register" type="button"
+                                role="tab" aria-controls="nav-register" aria-selected="false" tabindex="-1">Đăng
+                                kí</button>
                         </div>
-                        <div _ngcontent-ng-c2155392479="" class="mb-3">
-                            <input _ngcontent-ng-c2155392479="" type="password" name="email" id="password2"
-                                placeholder="Mật khẩu" class="form-control form-control-lg" formControlName="password">
-                                <p style="color: red;"
-                                *ngIf="LoginForm.get('password')?.errors?.['required']"
-                                >Bạn chưa nhập mật khẩu</p>
+                    </nav>
+                    <div class="tab-content" id="nav-tabContent">
+                        <div class="tab-pane fade active show" id="nav-sign-in" role="tabpanel"
+                            aria-labelledby="nav-sign-in-tab">
+                            <div class="col-lg-8 offset-lg-2 mt-5">
+
+                                <p class="mb-0">Đăng nhập với</p>
+                                <hr class="my-1">
+                                <div class="row mt-4 mb-5">
+                                    <div class="d-grid col-md-6 my-2">
+                                        <a href="#" class="btn btn-outline-dark btn-lg text-uppercase fs-6 rounded-1 ">
+                                            <div class="d-flex flex-wrap justify-content-center">
+                                                <iconify-icon icon="ion:logo-google"
+                                                    class="signup-social-icon me-2"></iconify-icon>
+                                                <p class="mb-0">Google</p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="d-grid col-md-6 my-2">
+                                        <a href="#" class="btn btn-outline-dark btn-lg text-uppercase fs-6 rounded-1 ">
+                                            <div class="d-flex flex-wrap justify-content-center">
+                                                <iconify-icon icon="ion:logo-facebook"
+                                                    class="signup-social-icon me-2"></iconify-icon>
+                                                <p class="mb-0">Facebook</p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p class="mb-0">Hoặc với email</p>
+                                <hr class="my-1">
+                                <form id="form1" [formGroup]="LoginForm" class="form-group flex-wrap ">
+                                    <div class="form-input col-lg-12 my-4">
+                                        <input type="email" id="exampleInputEmail1" name="email"
+                                            placeholder="Nhập email" formControlName="email"
+                                            class="form-control mb-3 p-4">
+                                        <p style="color: red;" *ngIf="LoginForm.get('email')?.errors?.['required']">Bạn
+                                            chưa nhập email</p>
+                                        <p style="color: red;" *ngIf="LoginForm.get('email')?.errors?.['email']">Email
+                                            không đúng định dạng</p>
+                                        <input type="password" id="inputPassword1" placeholder="Nhập mật khẩu"
+                                            formControlName="password" class="form-control mb-3 p-4"
+                                            aria-describedby="passwordHelpBlock">
+                                        <p style="color: red;" *ngIf="LoginForm.get('password')?.errors?.['required']">
+                                            Bạn chưa nhập
+                                            mật khẩu</p>
+                                        <label class="py-3 d-flex flex-wrap justify-content-between">
+                                            <div id="passwordHelpBlock" class="form-text ">
+                                                <a href="#" class="text-primary  fw-bold"> Forgot Password?</a>
+                                            </div>
+                                        </label>
+                                        <div class="d-grid my-3">
+                                            <button class="btn btn-dark btn-lg rounded-1"
+                                                [disabled]="LoginForm.invalid"
+                                                (click)="SumbitForm()"
+                                                >Đăng nhập</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
-                        <div _ngcontent-ng-c2155392479="" class="d-grid gap-2">
-                            <button (click)="SumbitForm()" [disabled]="LoginForm.invalid" type="submit"
-                                class="btn btn-dark btn-lg rounded-1">Đăng nhập</button>
+                        <div class="tab-pane fade" id="nav-register" role="tabpanel" aria-labelledby="nav-register-tab">
+                            <div class="col-lg-8 offset-lg-2 mt-5">
+                                <p class="mb-0">Tiếp tục với</p>
+                                <hr class="my-1">
+                                <div class="row mt-4 mb-5">
+                                    <div class="d-grid col-md-6 my-2">
+                                        <a href="#" class="btn btn-outline-dark btn-lg text-uppercase fs-6 rounded-1 ">
+                                            <div class="d-flex flex-wrap justify-content-center">
+                                                <iconify-icon icon="ion:logo-google"
+                                                    class="signup-social-icon me-2"></iconify-icon>
+                                                <p class="mb-0">Google</p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                    <div class="d-grid col-md-6 my-2">
+                                        <a href="#" class="btn btn-outline-dark btn-lg text-uppercase fs-6 rounded-1 ">
+                                            <div class="d-flex flex-wrap justify-content-center">
+                                                <iconify-icon icon="ion:logo-facebook"
+                                                    class="signup-social-icon me-2"></iconify-icon>
+                                                <p class="mb-0">Facebook</p>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+
+
+                                <p class="mb-0">Hoặc đăng kí với Email</p>
+                                <hr class="my-1">
+
+                                <form id="form1" [formGroup]="SiginForm" class="form-group flex-wrap ">
+                                    <div class="form-input col-lg-12 my-4">
+                                        <input type="text" id="exampleInputName" placeholder="Nhập hộ tên"
+                                            class="form-control mb-3 p-4" formControlName="fullname">
+                                        <p style="color: red;" *ngIf="SiginForm.get('fullname')?.errors?.['required']">
+                                            Bạn chưa nhập
+                                            hộ tên</p>
+                                        <input type="email" id="exampleInputEmail1" name="email"
+                                            placeholder="Nhập email" class="form-control mb-3 p-4"
+                                            formControlName="email"
+                                            >
+
+                                        <p style="color: red;" *ngIf="SiginForm.get('email')?.errors?.['required']">
+                                            Bạn chưa nhập
+                                            email</p>
+                                        <p style="color: red;" *ngIf="SiginForm.get('email')?.errors?.['email']">
+                                           Email không đúng định dạng</p>
+                                        <input type="password" id="inputPassword1" placeholder="Nhập mật khẩu"
+                                            class="form-control mb-3 p-4" aria-describedby="passwordHelpBlock"
+                                            formControlName="password"
+                                            >
+                                            <p style="color: red;" *ngIf="SiginForm.get('password')?.errors?.['required']">
+                                                Bạn chưa nhập mật khẩu</p>
+                                        <input type="password" id="inputPassword2" placeholder="Lặp lại mật khẩu"
+                                            class="form-control mb-3 p-4" aria-describedby="passwordHelpBlock"
+                                            formControlName="confirm_password">
+                                            <p style="color: red;" *ngIf="SiginForm.get('confirm_password')?.errors?.['required']">
+                                                Bạn chưa xác nhận mật khẩu</p>
+                                        <label class="py-3 d-flex flex-wrap justify-content-between">
+                                        </label>
+                                        <div class="d-grid my-3">
+                                            <button class="btn btn-dark btn-lg rounded-1"
+                                            [disabled]="SiginForm.invalid"
+                                            (click)="SumbitSignin()"
+                                            >Đăng kí ngay</button>
+                                        </div>
+
+                                    </div>
+                                </form>
+
+                            </div>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
