--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -62,11 +62,6 @@
   </defs>
 </svg>
 
-<div class="preloader-wrapper">
-  <div class="preloader">
-  </div>
-</div>
-
 <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="offcanvasCart" aria-labelledby="My Cart">
   <div class="offcanvas-header justify-content-center">
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -244,7 +239,7 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide" *ngFor="let item of ListProduct">
           <div class="card position-relative">
-            <a href="single-product.html"><img src="./assets/images/item1.jpg" class="img-fluid rounded-4"
+            <a [routerLink]="['/single-product/' + item.id]"><img src="./assets/images/item1.jpg" class="img-fluid rounded-4"
                 alt="image"></a>
             <div class="card-body p-0">
               <a href="single-product.html">
