--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -239,8 +239,10 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide" *ngFor="let item of ListProduct">
           <div class="card position-relative">
-            <a [routerLink]="['/single-product/' + item.id]"><img src="./assets/images/item1.jpg" class="img-fluid rounded-4"
-                alt="image"></a>
+            <a [routerLink]="['/single-product/' + item.id]" style="width: 100%; height: 20rem;">
+              <img src="https://localhost:7192/api/GetImageControllers/get-images-cart/{{item.link[0].link}}"
+                class="img-fluid rounded-4" alt="image" style="height: 100%; width: 100%; object-fit: cover;">
+            </a>
             <div class="card-body p-0">
               <a href="single-product.html">
                 <h3 class="card-title pt-4 m-0">
