--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -13,26 +13,30 @@
 
             <main class="col-md-9">
                 <div class="product-grid row ">
-                    <div class="col-md-4 my-4" *ngFor="let item of list">
+                    <div class="col-md-4 my-4" *ngFor="let item of listProducts">
                         <div class="card position-relative">
-                            <a href="single-product.html"><img
-                                    src="https://demo.templatesjungle.com/waggy/images/item9.jpg"
-                                    class="img-fluid rounded-4" alt="image"></a>
+                            <a href="single-product.html" style="width: 100%; height: 20rem;">
+                                <img src="https://localhost:7192/api/GetImageControllers/get-images-cart/{{item.link[0].link}}"
+                                    class="img-fluid rounded-4" alt="image"
+                                    style="width: 100%; height: 100%; object-fit: cover;">
+                            </a>
                             <div class="card-body p-0">
                                 <a href="single-product.html">
-                                    <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
+                                    <h3 class="card-title pt-4 m-0">
+                                        {{item.name}}
+                                    </h3>
                                 </a>
 
                                 <div class="card-text">
-                                    <h3 class="secondary-font text-primary">$18.00</h3>
+                                    <h3 class="secondary-font text-primary">{{item.price | currency:'
+                                        ':'symbol':'1.0-0'}} VND</h3>
 
                                     <div class="d-flex flex-wrap mt-3">
-                                        <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
-                                            <h5 class="text-uppercase m-0">Add to Cart</h5>
-                                        </a>
-                                        <a href="#" class="btn-wishlist px-4 pt-3 ">
-                                            <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
-                                        </a>
+                                        <button (click)="AddToCart(item)" class="btn-cart me-3 px-4 pt-3 pb-3 border-1 bg-transparent">
+                                            <h5 class="text-uppercase m-0">
+                                                Thêm vào giỏ hàng
+                                            </h5>
+                                        </button>
                                     </div>
 
 
@@ -88,17 +92,8 @@
                             <li class="cat-item">
                                 <a href="/collections/categories">All</a>
                             </li>
-                            <li class="cat-item">
-                                <a href="#" class="nav-link">Dogs</a>
-                            </li>
-                            <li class="cat-item">
-                                <a href="#" class="nav-link">Food</a>
-                            </li>
-                            <li class="cat-item">
-                                <a href="#" class="nav-link">Cats</a>
-                            </li>
-                            <li class="cat-item">
-                                <a href="#" class="nav-link">Birds</a>
+                            <li class="cat-item" *ngFor="let item of listCategorys">
+                                <a href="#" class="nav-link"> {{item.name}} </a>
                             </li>
                         </ul>
                     </div>
