--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,11 +26,11 @@
         class="col-sm-8 col-lg-4 d-flex justify-content-end gap-5 align-items-center mt-4 mt-sm-0 justify-content-center justify-content-sm-end">
         <div class="support-box text-end d-none d-xl-block">
           <span class="fs-6 secondary-font text-muted">Số Điện Thoại</span>
-          <h5 class="mb-0">123456789</h5>
+          <h5 class="mb-0"> {{user.phoneNumber}} </h5>
         </div>
         <div class="support-box text-end d-none d-xl-block">
           <span class="fs-6 secondary-font text-muted">Email</span>
-          <h5 class="mb-0">Zutupiagmail.com</h5>
+          <h5 class="mb-0"> {{user.email}} </h5>
         </div>
 
 
@@ -106,7 +106,8 @@
                 aria-expanded="false">Sản Phẩm</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
                 <li *ngFor="let item of categoris">
-                  <a href="" class="dropdown-item"> {{item.name}} <span class="badge bg-success text-dark ms-2">HOT</span></a>
+                  <a href="" class="dropdown-item"> {{item.name}} <span
+                      class="badge bg-success text-dark ms-2">HOT</span></a>
                 </li>
 
               </ul>
@@ -125,9 +126,13 @@
             </li>
           </ul>
 
+
           <div class="d-none d-lg-flex align-items-end">
+            <button *ngIf="user.fullName != ''" class="btn-cart border-1 bg-transparent btn-sm">
+              {{user.fullName}}
+            </button>
             <ul class="d-flex justify-content-end list-unstyled m-0">
-              <li>
+              <li *ngIf="user.fullName == ''">
                 <a [routerLink]="['/login']" class="mx-3">
                   <iconify-icon icon="healthicons:person" class="fs-4"></iconify-icon>
                 </a>
@@ -141,7 +146,6 @@
                 </a>
               </li>
             </ul>
-
           </div>
 
         </div>
