--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -39,8 +39,6 @@
                                             </h5>
                                         </button>
                                     </div>
-
-
                                 </div>
 
                             </div>
@@ -72,16 +70,15 @@
                     <div class="widget-menu">
                         <div class="widget-search-bar">
                             <div class="search-bar border rounded-2 border-dark-subtle pe-3">
-                                <form id="search-form" class="text-center d-flex align-items-center" action=""
-                                    method="">
-                                    <input type="text" class="form-control border-0 bg-transparent"
-                                        placeholder="Nhập tìm kiếm">
+                                <div id="search-form" class="text-center d-flex align-items-center">
+                                    <input type="text" class="form-control border-0 bg-transparent" [(ngModel)]="search"
+                                        (input)="Search(search)" placeholder="Nhập tìm kiếm">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                                         <path fill="currentColor"
                                             d="M21.71 20.29L18 16.61A9 9 0 1 0 16.61 18l3.68 3.68a1 1 0 0 0 1.42 0a1 1 0 0 0 0-1.39ZM11 18a7 7 0 1 1 7-7a7 7 0 0 1-7 7Z">
                                         </path>
                                     </svg>
-                                </form>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -91,10 +88,10 @@
                         <h4 class="widget-title">Danh mục sản phẩm</h4>
                         <ul class="product-categories sidebar-list list-unstyled">
                             <li class="cat-item">
-                                <a href="/collections/categories">All</a>
+                                <a type="button" (click)="GetByCategory(0)">All</a>
                             </li>
                             <li class="cat-item" *ngFor="let item of listCategorys">
-                                <a href="#" class="nav-link"> {{item.name}} </a>
+                                <a type="button" (click)="GetByCategory(item.id)" class="nav-link"> {{item.name}} </a>
                             </li>
                         </ul>
                     </div>
