--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -128,7 +128,8 @@
 
 
           <div class="d-none d-lg-flex align-items-end">
-            <button *ngIf="user.fullName != ''" class="btn-cart border-1 bg-transparent btn-sm">
+            <button *ngIf="user.fullName != ''" [routerLink]="['/order-user']"
+              class="btn-cart border-1 bg-transparent btn-sm">
               {{user.fullName}}
             </button>
             <ul class="d-flex justify-content-end list-unstyled m-0">
