--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -49,7 +49,13 @@
                                     (click)="GetById(item.id)" aria-controls="offcanvasCart"
                                     [class.text-primary]="item.statusDelivery == 3" class="btn-cart btn bg-transparent"
                                     style="color: red;">
-                                    {{item.statusDelivery == 3 ? 'Giao thành công' : 'Đơn bị hủy'}}
+                                    <p class="m-0" *ngIf="item.statusDelivery >= 3">
+                                        {{item.statusDelivery == 3 ? 'Giao thành công' : 'Đơn bị hủy'}}
+                                    </p>
+                                    <p class="m-0 text-dark" 
+                                    *ngIf="item.statusDelivery < 3">
+                                        {{item.statusDelivery == 1 ? 'Chờ xác nhận' : 'Đơn đang giao'}}
+                                    </p>
                                 </button>
                             </td>
                         </tr>
